Usecase-10-Policy-as-code/constraints/no-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest

metadata:
  name: disallow-latest-tag

spec:

  match:

    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
