Usecase-10-Policy-as-code/constraints/required_labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels

metadata:
  name: required-labels

spec:

  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment

  parameters:
    labels:
      - owner
      - team
      - environment
      - application
